--- a/research/st_01.ipynb
+++ b/research/st_01.ipynb
@@ -26,12 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from deepClassifier.constants import *\n",
-    "from deepClassifier import logger"
+    "from deepClassifier import logger\n",
+    "from pathlib import Path"
    ]
   },
   {
@@ -54,31 +55,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2022-09-19 13:29:33,167: INFO: common]: yaml file: configs/config.yaml loaded successfully\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'artifact_root': 'artifacts',\n",
-       " 'data_ingestion': {'root_dir': 'artifact_root/data_ingestion',\n",
-       "  'source_dir': 'https://download.microsoft.com/download/3/E/1/3E1C3F21-ECDB-4869-8368-6DEBA77B919F/kagglecatsanddogs_5340.zip',\n",
-       "  'local_data_dir': 'artifacts/data_ingestion/data.zip',\n",
-       "  'unzipped_dir': 'artifacts/data_ingestion'}}"
+       "ConfigBox({'artifacts_root': 'artifacts', 'data_ingestion': {'root_dir': 'artifacts/data_ingestion', 'source_url': 'https://download.microsoft.com/download/3/E/1/3E1C3F21-ECDB-4869-8368-6DEBA77B919F/kagglecatsanddogs_5340.zip', 'local_data_file': 'artifacts/data_ingestion/data.zip', 'unzipped_dir': 'artifacts/data_ingestion'}})"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "read_yaml(\"configs/config.yaml\")"
+    "read_yaml(Path(\"configs/config.yaml\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,84 +120,12 @@
     "        on line: [{try_block_no}]\n",
     "        \"\"\"\n",
     "        return error_message\n",
-    "    \n",
-    "\n",
-    "\n",
-    "    \n",
-    "# a,b = 2, 0\n",
-    "\n",
-    "# try:\n",
-    "#     if b == 0: from e\n",
-    "#         raise Exception(\"can not divide this!\")\n",
-    "# except Exception as e:\n",
-    "#     _, _, exec_tb = sys.exc_info()\n",
-    "#     exception_line_no = exec_tb.tb_frame.f_lineno\n",
-    "#     try_block_no = exec_tb.tb_lineno\n",
-    "#     file_name = exec_tb.tb_frame.f_code.co_filename\n",
-    "#     print(file_name, try_block_no, exception_line_no)\n",
-    "#     error_message = f\"\"\"\n",
-    "#     Error occured in script:\n",
-    "#     [{file_name}]\n",
-    "#     raised by line: [{exception_line_no}]\n",
-    "#     on line: [{try_block_no}]\n",
-    "#     \"\"\"\n",
-    "#     print(error_message)\n",
-    "\n"
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def div(a,b):\n",
-    "\n",
-    "    try:\n",
-    "        if b == 0:\n",
-    "            # raise Exception as e\n",
-    "        \n",
-    "            return a/b\n",
-    "    except Exception as e:\n",
-    "        raise DeepClassifierException(e, sys) from e"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_88077/1023788321.py 7 9\n"
-     ]
-    },
-    {
-     "ename": "DeepClassifierException",
-     "evalue": "\n        Error occured in script:\n        [/tmp/ipykernel_88077/1023788321.py]\n        raised by line: [9]\n        on line: [7]\n        ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [72], line 7\u001b[0m, in \u001b[0;36mdiv\u001b[0;34m(a, b)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m b \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m      5\u001b[0m         \u001b[38;5;66;03m# raise Exception as e\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43ma\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43mb\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n",
-      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mDeepClassifierException\u001b[0m                   Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [73], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdiv\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn [72], line 9\u001b[0m, in \u001b[0;36mdiv\u001b[0;34m(a, b)\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m a\u001b[38;5;241m/\u001b[39mb\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m----> 9\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m DeepClassifierException(e, sys) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01me\u001b[39;00m\n",
-      "\u001b[0;31mDeepClassifierException\u001b[0m: \n        Error occured in script:\n        [/tmp/ipykernel_88077/1023788321.py]\n        raised by line: [9]\n        on line: [7]\n        "
-     ]
-    }
-   ],
-   "source": [
-    "div(2,0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,15 +133,35 @@
     "\n",
     "DataIngestionConfig = namedtuple(\"DataIngestionConfig\", [\n",
     "    \"root_dir\",\n",
-    "    \"source_dir\",\n",
-    "    \"local_data_dir\",\n",
+    "    \"source_urr\",\n",
+    "    \"local_data_file\",\n",
     "    \"unzipped_dir\"\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# alternative to namedtuple\n",
+    "\n",
+    "from dataclasses import dataclass\n",
+    "\n",
+    "\n",
+    "@dataclass\n",
+    "class DataIngestionConfig:\n",
+    "    root_dir: Path\n",
+    "    source_url: Path\n",
+    "    local_data_file: Path\n",
+    "    unzipped_dir: Path\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,19 +177,19 @@
     "        params_filepath: str=PARAMS_FILE_PATH) -> None:\n",
     "        self.config_details = read_yaml(config_filepath)\n",
     "        self.params_details = read_yaml(params_filepath)\n",
-    "        self.artifact_root = self.config_details[\"artifact_root\"]\n",
+    "        self.artifact_roots = self.config_details[\"artifacts_root\"]\n",
     "        \n",
     "    @ensure_annotations\n",
     "    def data_ingestion_config(self) -> DataIngestionConfig:\n",
     "        root_dir = self.config_details[\"data_ingestion\"][\"root_dir\"]\n",
-    "        source_dir = self.config_details[\"data_ingestion\"][\"source_dir\"]\n",
-    "        local_data_dir = self.config_details[\"data_ingestion\"][\"local_data_dir\"]\n",
+    "        source_url = self.config_details[\"data_ingestion\"][\"source_url\"]\n",
+    "        local_data_file = self.config_details[\"data_ingestion\"][\"local_data_file\"]\n",
     "        unzipped_dir = self.config_details[\"data_ingestion\"][\"unzipped_dir\"]\n",
     "        \n",
     "        data_ingestion_config = DataIngestionConfig(\n",
     "            root_dir=root_dir,\n",
-    "            source_dir=source_dir,\n",
-    "            local_data_dir=local_data_dir,\n",
+    "            source_url=source_url,\n",
+    "            local_data_file=local_data_file,\n",
     "            unzipped_dir=unzipped_dir\n",
     "        )\n",
     "        \n",
@@ -247,16 +199,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2022-09-19 13:29:34,559: INFO: common]: yaml file: configs/config.yaml loaded successfully\n",
+      "[2022-09-19 13:29:34,561: INFO: common]: yaml file: params.yaml loaded successfully\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "DataIngestionConfig(root_dir='artifact_root/data_ingestion', source_dir='https://download.microsoft.com/download/3/E/1/3E1C3F21-ECDB-4869-8368-6DEBA77B919F/kagglecatsanddogs_5340.zip', local_data_dir='artifacts/data_ingestion/data.zip', unzipped_dir='artifacts/data_ingestion')"
+       "DataIngestionConfig(root_dir='artifacts/data_ingestion', source_url='https://download.microsoft.com/download/3/E/1/3E1C3F21-ECDB-4869-8368-6DEBA77B919F/kagglecatsanddogs_5340.zip', local_data_file='artifacts/data_ingestion/data.zip', unzipped_dir='artifacts/data_ingestion')"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,21 +243,21 @@
     "        config_file_path=CONFIG_FILE_PATH, \n",
     "        params_file_path=PARAMS_FILE_PATH):\n",
     "        self.config_file_path = ConfigBox(read_yaml(config_file_path))\n",
-    "        self.artifacts = self.config_file_path.artifact_root\n",
+    "        self.artifacts = self.config_file_path.artifacts_root\n",
     "        # self.params_file_path = ConfigBox(read_yaml(params_file_path))\n",
     "        \n",
     "    def data_ingestion_config(self) -> DataIngestionConfig:\n",
     "        try:\n",
     "            data_ingestion = self.config_file_path.data_ingestion\n",
     "            root_dir = data_ingestion.root_dir\n",
-    "            source_dir = data_ingestion.source_dir\n",
-    "            local_data_dir = data_ingestion.local_data_dir\n",
+    "            source_url = data_ingestion.source_url\n",
+    "            local_data_file = data_ingestion.local_data_file\n",
     "            unzipped_dir = data_ingestion.unzipped_dir\n",
     "            \n",
     "            data_ingestion_config = DataIngestionConfig(\n",
     "                root_dir=root_dir,\n",
-    "                source_dir=source_dir,\n",
-    "                local_data_dir=local_data_dir,\n",
+    "                source_url=source_url,\n",
+    "                local_data_file=local_data_file,\n",
     "                unzipped_dir=unzipped_dir\n",
     "            )\n",
     "            logger.info(f\"DataIngestionConfig setup: \\n{data_ingestion_config}\")\n",
@@ -310,25 +270,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2022-09-16 10:35:30,871: INFO: common]: yaml file: configs/config.yaml loaded successfully\n",
-      "[2022-09-16 10:35:30,954: INFO: 480393586]: DataIngestionConfig setup: \n",
-      "DataIngestionConfig(root_dir='artifact_root/data_ingestion', source_dir='https://download.microsoft.com/download/3/E/1/3E1C3F21-ECDB-4869-8368-6DEBA77B919F/kagglecatsanddogs_5340.zip', local_data_dir='artifacts/data_ingestion/data.zip', unzipped_dir='artifacts/data_ingestion')\n"
+      "[2022-09-19 13:29:35,103: INFO: common]: yaml file: configs/config.yaml loaded successfully\n",
+      "[2022-09-19 13:29:35,105: INFO: 3825945991]: DataIngestionConfig setup: \n",
+      "DataIngestionConfig(root_dir='artifacts/data_ingestion', source_url='https://download.microsoft.com/download/3/E/1/3E1C3F21-ECDB-4869-8368-6DEBA77B919F/kagglecatsanddogs_5340.zip', local_data_file='artifacts/data_ingestion/data.zip', unzipped_dir='artifacts/data_ingestion')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "DataIngestionConfig(root_dir='artifact_root/data_ingestion', source_dir='https://download.microsoft.com/download/3/E/1/3E1C3F21-ECDB-4869-8368-6DEBA77B919F/kagglecatsanddogs_5340.zip', local_data_dir='artifacts/data_ingestion/data.zip', unzipped_dir='artifacts/data_ingestion')"
+       "DataIngestionConfig(root_dir='artifacts/data_ingestion', source_url='https://download.microsoft.com/download/3/E/1/3E1C3F21-ECDB-4869-8368-6DEBA77B919F/kagglecatsanddogs_5340.zip', local_data_file='artifacts/data_ingestion/data.zip', unzipped_dir='artifacts/data_ingestion')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
