--- a/research/st_02.ipynb
+++ b/research/st_02.ipynb
@@ -97,13 +97,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2022-09-21 10:12:32,067: INFO: common]: yaml file: configs/config.yaml loaded successfully\n",
-      "[2022-09-21 10:12:32,071: INFO: common]: yaml file: params.yaml loaded successfully\n",
-      "[2022-09-21 10:12:32,073: INFO: common]: created directory at: artifacts\n",
-      "{'artifacts_root': 'artifacts', 'data_ingestion': {'root_dir': 'artifacts/data_ingestion', 'source_url': 'https://download.microsoft.com/download/3/E/1/3E1C3F21-ECDB-4869-8368-6DEBA77B919F/kagglecatsanddogs_5340.zip', 'local_data_file': 'artifacts/data_ingestion/data.zip', 'unzipped_dir': 'artifacts/data_ingestion'}, 'prepare_base_model': {'root_dir': 'artifacts/prepare_base_model', 'base_model_path': 'artifacts/prepare_base_model/base_model.h5', 'updated_base_model_path': 'artifacts/prepare_base_model/base_model_updated.h5'}} {'IMAGE_SIZE': [224, 224, 3], 'INCLUDE_TOP': False, 'WEIGHTS': 'imagenet', 'CLASSES': 2, 'LEARNING_RATE': 0.01} \n",
+      "[2022-09-23 15:55:57,057: INFO: common]: yaml file: configs/config.yaml loaded successfully\n",
+      "[2022-09-23 15:55:57,062: INFO: common]: yaml file: params.yaml loaded successfully\n",
+      "[2022-09-23 15:55:57,064: INFO: common]: created directory at: artifacts\n",
+      "{'artifacts_root': 'artifacts', 'data_ingestion': {'root_dir': 'artifacts/data_ingestion', 'source_url': 'https://download.microsoft.com/download/3/E/1/3E1C3F21-ECDB-4869-8368-6DEBA77B919F/kagglecatsanddogs_5340.zip', 'local_data_file': 'artifacts/data_ingestion/data.zip', 'unzipped_dir': 'artifacts/data_ingestion'}, 'prepare_base_model': {'root_dir': 'artifacts/prepare_base_model', 'base_model_path': 'artifacts/prepare_base_model/base_model.h5', 'updated_base_model_path': 'artifacts/prepare_base_model/base_model_updated.h5'}, 'prepare_callbacks': {'root_dir': 'artifacts/prepare_callbacks', 'tensorboard_root_log_dir': 'artifacts/prepare_callbacks/tensorboard_log_dir', 'checkpoint_model_filepath': 'artifacts/prepare_callbacks/checkpoint_dir/model.h5'}, 'training': {'root_dir': 'artifacts/training', 'trained_model_path': 'artifacts/training/model.h5'}} {'IMAGE_SIZE': [224, 224, 3], 'INCLUDE_TOP': False, 'WEIGHTS': 'imagenet', 'CLASSES': 2, 'LEARNING_RATE': 0.01, 'AUGUMENTATION': True, 'EPOCHS': 1, 'BATCH_SIZE': 16} \n",
       "\n",
       "\n",
-      "[2022-09-21 10:12:32,075: INFO: common]: created directory at: artifacts/prepare_base_model\n"
+      "[2022-09-23 15:55:57,066: INFO: common]: created directory at: artifacts/prepare_base_model\n"
      ]
     },
     {
@@ -164,14 +164,14 @@
     "                for layer in model.layers[:-freeze_till]:\n",
     "                    model.trainable = False\n",
     "                    \n",
-    "            print(len(model.layers))\n",
-    "            print(\"hello there\")\n",
+    "            # print(len(model.layers))\n",
+    "            # print(\"hello there\")\n",
     "                    \n",
     "            flatten_in = tf.keras.layers.Flatten()(model.output)\n",
     "            prediction = tf.keras.layers.Dense(\n",
     "                units=classes,\n",
     "                activation=\"softmax\"\n",
-    "            )\n",
+    "            )(flatten_in)\n",
     "            \n",
     "            full_model = tf.keras.models.Model(\n",
     "                inputs=model.inputs,\n",
@@ -183,12 +183,16 @@
     "                loss=tf.keras.losses.CategoricalCrossentropy(),\n",
     "                metrics=[\"accuracy\"]\n",
     "            )\n",
+    "            \n",
+    "            full_model.summary()\n",
+    "            \n",
+    "            return full_model\n",
     "    \n",
     "    def update_base_model(self):\n",
     "        # newly added lines for getting basemodel\n",
-    "        # self.model = tf.keras.models.load_model(\n",
-    "        #     self.config.base_model_path\n",
-    "        # )\n",
+    "        self.model = tf.keras.models.load_model(\n",
+    "            self.config.base_model_path\n",
+    "        )\n",
     "        \n",
     "        self.full_model = self._prepare_full_model(\n",
     "            model=self.model,\n",
@@ -209,35 +213,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2022-09-21 10:13:47,136: INFO: common]: yaml file: configs/config.yaml loaded successfully\n",
-      "[2022-09-21 10:13:47,141: INFO: common]: yaml file: params.yaml loaded successfully\n",
-      "[2022-09-21 10:13:47,143: INFO: common]: created directory at: artifacts\n",
-      "[2022-09-21 10:13:47,147: INFO: common]: created directory at: artifacts/prepare_base_model\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-09-21 10:13:47.213875: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
-      "2022-09-21 10:13:47.213930: W tensorflow/stream_executor/cuda/cuda_driver.cc:263] failed call to cuInit: UNKNOWN ERROR (303)\n",
-      "2022-09-21 10:13:47.213963: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (mobo): /proc/driver/nvidia/version does not exist\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2022-09-21 10:13:47,791: WARNING: hdf5_format]: No training configuration found in the save file, so the model was *not* compiled. Compile it manually.\n",
-      "19\n",
-      "hello there\n"
+      "[2022-09-23 16:24:25,529: INFO: common]: yaml file: configs/config.yaml loaded successfully\n",
+      "[2022-09-23 16:24:25,632: INFO: common]: yaml file: params.yaml loaded successfully\n",
+      "[2022-09-23 16:24:25,633: INFO: common]: created directory at: artifacts\n",
+      "[2022-09-23 16:24:25,635: INFO: common]: created directory at: artifacts/prepare_base_model\n",
+      "[2022-09-23 16:24:26,084: WARNING: hdf5_format]: No training configuration found in the save file, so the model was *not* compiled. Compile it manually.\n",
+      "Model: \"model_1\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " input_1 (InputLayer)        [(None, 224, 224, 3)]     0         \n",
+      "                                                                 \n",
+      " block1_conv1 (Conv2D)       (None, 224, 224, 64)      1792      \n",
+      "                                                                 \n",
+      " block1_conv2 (Conv2D)       (None, 224, 224, 64)      36928     \n",
+      "                                                                 \n",
+      " block1_pool (MaxPooling2D)  (None, 112, 112, 64)      0         \n",
+      "                                                                 \n",
+      " block2_conv1 (Conv2D)       (None, 112, 112, 128)     73856     \n",
+      "                                                                 \n",
+      " block2_conv2 (Conv2D)       (None, 112, 112, 128)     147584    \n",
+      "                                                                 \n",
+      " block2_pool (MaxPooling2D)  (None, 56, 56, 128)       0         \n",
+      "                                                                 \n",
+      " block3_conv1 (Conv2D)       (None, 56, 56, 256)       295168    \n",
+      "                                                                 \n",
+      " block3_conv2 (Conv2D)       (None, 56, 56, 256)       590080    \n",
+      "                                                                 \n",
+      " block3_conv3 (Conv2D)       (None, 56, 56, 256)       590080    \n",
+      "                                                                 \n",
+      " block3_pool (MaxPooling2D)  (None, 28, 28, 256)       0         \n",
+      "                                                                 \n",
+      " block4_conv1 (Conv2D)       (None, 28, 28, 512)       1180160   \n",
+      "                                                                 \n",
+      " block4_conv2 (Conv2D)       (None, 28, 28, 512)       2359808   \n",
+      "                                                                 \n",
+      " block4_conv3 (Conv2D)       (None, 28, 28, 512)       2359808   \n",
+      "                                                                 \n",
+      " block4_pool (MaxPooling2D)  (None, 14, 14, 512)       0         \n",
+      "                                                                 \n",
+      " block5_conv1 (Conv2D)       (None, 14, 14, 512)       2359808   \n",
+      "                                                                 \n",
+      " block5_conv2 (Conv2D)       (None, 14, 14, 512)       2359808   \n",
+      "                                                                 \n",
+      " block5_conv3 (Conv2D)       (None, 14, 14, 512)       2359808   \n",
+      "                                                                 \n",
+      " block5_pool (MaxPooling2D)  (None, 7, 7, 512)         0         \n",
+      "                                                                 \n",
+      " flatten_1 (Flatten)         (None, 25088)             0         \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 2)                 50178     \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 14,764,866\n",
+      "Trainable params: 50,178\n",
+      "Non-trainable params: 14,714,688\n",
+      "_________________________________________________________________\n"
      ]
     }
    ],
@@ -264,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# my understanding of how prepare base model works\n",
+    "# test code.\n",
     "\n",
     "class PrepareBaseModel:\n",
     "    def __init__(self, prepare_base_model_config: PrepareBaseModelConfig):\n",
@@ -321,93 +359,6 @@
     }
    ],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Person:\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def name(name: str) -> str:\n",
-    "        return f\"your name is {name}\"\n",
-    "    \n",
-    "    @classmethod\n",
-    "    def surname(cls, lname: str) -> str:\n",
-    "        return f\"your surname is {lname}\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p = Person()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'your surname is sam'"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Person.surname(\"sam\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'your surname is paul'"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p.surname(\"paul\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2, 3, 4, 5]"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x = [2,3,4,5,2,2]\n",
-    "x[:-2]"
-   ]
   },
   {
    "cell_type": "code",
